# uplevel

./: Makefile  Readme.md  pyproject.toml
.github/workflows/: pythonpublish.yml
src/uplevel/: __init__.py
tests/: fib.py  simplematch.py
